# roisa

./: .gitignore  .gitmessage  CMakeLists 2.txt  CMakeLists.txt  CMakePresets.json  main.py  requirements.txt
roisa/core/: analysis.py  kinetics.py  report.py  roi_algorithms.py  roi_volume.py  suv.py
roisa/gui/: __init__.py  bars_widget.py  dicom_tag_widget.py  histogram_widget.py  image_list_widget.py  main_window.py  ortho_viewer.py  settings_dialog.py  slice_view.py  tac_widget.py  tool_panel.py  vtk_view.py
scripts/: finish-feature.sh  new-feature.sh
src/: main.cpp
src/core/: ROIAlgorithms.cpp  ROIAlgorithms.h  ROIVolume.cpp  ROIVolume.h  Report.cpp  Report.h  SUV.cpp  SUV.h
src/gui/: BarsWidget.cpp  BarsWidget.h  BgWorker.h  DicomTagWidget.cpp  DicomTagWidget.h  HistogramWidget 2.cpp  HistogramWidget 2.h  ImageListWidget.cpp  ImageListWidget.h  MainWindow.cpp  MainWindow.h  OrthoViewer.cpp  OrthoViewer.h  SeriesBrowser 2.h  SeriesBrowser.cpp  SettingsDialog.cpp  SettingsDialog.h  SliceView.cpp  SliceView.h  SurfaceView 2.h  SurfaceView.cpp  TacWidget.cpp  TacWidget.h  ToolPanel.cpp  ToolPanel.h  VtkView 2.cpp  VtkView.cpp  VtkView.h
